syntax = "proto3";

package google.protobuf;

message BoolValue {
  bool value = 1;
}
