syntax = "proto3";

package google.protobuf;

message Int32Value {
  int32 value = 1;
}
