syntax = "proto3";

package google.protobuf;

message StringValue {
  string value = 1;
}
