syntax = "proto3";

package google.protobuf;

message UInt32Value {
  uint64 value = 1;
}
