syntax = "proto3";

package google.protobuf;

message UInt64Value {
  uint64 value = 1;
}
